# YANN

./: .gitignore  CPPANN.sln
CPPANN/: ANN.h  ANNTest.cpp  CPPANN.cpp  CPPANN.vcxproj  CPPANN.vcxproj.filters  Matrix.h  ReadMe.txt  stdafx.cpp
CPPANN/include/: ANN.h
CharacterRecogonition/: CharacterRecognition.cpp  CharacterRecognitionTest.cpp  CharacterRecogonition.vcxproj  CharacterRecogonition.vcxproj.filters  MinstData.cpp  MinstData.h  MinstData2.h  MinstDataTest.cpp  MinstReader.cpp  MinstReader.h  main.cpp
CrossChecks/: CounterCheckInPython.py  CounterCheckInPythonTanhAndSigmoid.py  CounterCheckInPythonTanhAndSigmoidWithDifferentSpeeds.py
Examples/CharacterRecogonition/: ANNToMINSTConverter.cpp  ANNToMINSTConverter.h  CharacterRecognitionTest.cpp  CharacterRecognitionTest_clBlas.cpp  CharacterRecognition_clBlas.vcxproj  CharacterRecognition_clBlas.vcxproj.filters  CharacterRecogonition.vcxproj  CharacterRecogonition.vcxproj.filters  clBLAS.h
Examples/CharacterRecogonition/CharacterRecognition/: CharacterRecogonition.vcxproj  CharacterRecogonition.vcxproj.filters
Examples/CharacterRecogonition/CharacterRecognition_clBlas/: CharacterRecognition_clBlas.vcxproj  CharacterRecognition_clBlas.vcxproj.filters  ClBlasGPU.cpp  ClBlasGPU.h
Examples/common/MINST/: MINST.vcxproj  MINST.vcxproj.filters  MinstDataTest.cpp  main.cpp
Matrix/: Matrix.vcxproj  Matrix.vcxproj.filters  MatrixBuilder.h  MatrixTest.cpp  ReferenceMatrixBuilder.h  Test.cpp
Matrix/include/: Matrix.h  MatrixBuilder.h  ReferenceMatrix.h  ReferenceMatrixBuilder.h
OpenCLMatrix/: OpenCLMatrix.cpp  OpenCLMatrix.vcxproj  OpenCLMatrix.vcxproj.filters  OpenCLMatrixTest.cpp  ReadMe.txt  stdafx.cpp  test2.cl
OpenCLMatrix/include/: OpenCLMatrix.h  OpenCLMatrixBuilder.h
googlemock/msvc/2010/: gmock.vcxproj
googletest/msvc/: gtest.vcxproj
src/: CMakeLists.txt  FindOpenCL.cmake
src/include/ANN/: ANN.h
src/include/OpenCLMatrix/: OpenCLMatrix.h  OpenCLMatrixBuilder.h  test2.cl
src/include/ReferenceMatrix/: Matrix.h  MatrixBuilder.h  ReferenceMatrix.h  ReferenceMatrixBuilder.h
src/tests/ANN/: ANNTest.cpp
src/tests/CharacterRecognition/: ANNToMINSTConverter.h  CharacterRecognitionOpenCLTest.cpp  CharacterRecognitionTest.cpp  main.cpp
src/tests/CrossChecks/: CounterCheckInPython.py
src/tests/MINST/: MinstData.h  MinstDataTest.cpp
src/tests/OpenCLMatrix/: OpenCLMatrixTest.cpp
src/tests/ReferenceMatrix/: MatrixTest.cpp
